--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!-- 
-	Student Name: Maria Cruz
+	Student Name: Vivian Nguyen
 	File Name: contact.html
-	Today's Date: May 20, 2021
+	Today's Date: Sep 11, 2023
  -->
 <html lang="en">
 <head>
