--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!-- 
-	Student Name: Maria Cruz
+	Student Name: Vivian Nguyen
 	File Name: index.html
-	Today's Date: May 7, 2021
+	Today's Date: Sep 11, 2023
  -->
 <html lang="en">
 <head>
