--- a/instructors.html
+++ b/instructors.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <!-- 
-	Student Name: Maria Cruz
+	Student Name: Vivian Nguyen
 	File Name: instructors.html
-	Today's Date: July 27, 2021
+	Today's Date: Sep 11, 2023
  -->
 <html lang="en">
 <head>
